public/css/styles.css
.title {
    position: relative;
    font-size: 20px;
    font-family: 'Arial';
}

.year-entry-area {
    position: relative;
    top: 50px;
    width: 270px;
    height: 100px;
    font-size: 100px;
    word-wrap: break-word;
    display: inline-block;
    text-overflow: clip;
    letter-spacing: 10px;
    border: dotted black;
}
::placeholder {
    opacity: 0.2;
}

.body {
    display: flex;
}

.btn {
    position: relative;
    top: 200px;
    width: 400px;
    padding: 100px;
}

.year {
    position: relative;
    top: 50px;
    font-size: 100px;
    text-align: center;
    display: inline-block;
}

/* The default Node.js screen


* {
  margin: 0;
}

html, body {
  height: 100%;
}

html {
  margin: 0;
  padding: 0;
  font-family: "Helvetica Neue", Roboto, Arial, sans-serif;
  font-size: 62.5%;
  color: white;
  background: linear-gradient(to bottom, #2473ab 0%,#1e528e 70%,#5b7983 100%);
}

body {
  font-size: 1.8rem;
}

h1, h2, h3 {
  font-weight: normal;
}

h1 {
  font-size: 3.5rem;
  margin-bottom: 0.5rem;
}

a {
  color: white;
  text-decoration: none;
}

.wrapper {
  min-height: 100%;
  height: auto !important;
  height: 100%;
  margin: 0 auto -7rem;
  position: relative;
}

footer, .push {
  height: 7rem;
}

footer .footer-contents {
  padding: 0 5rem;
  position: relative;
}

.website-nav {
  position: relative;
  padding: 5rem;
}

.website-nav ul {
  list-style: none;
  margin: 0;
  padding: 0;
}

.website-nav ul li {
  float: left;
  padding: 0.5rem 2rem 0.5rem 0;
  line-height: 21px;
}

.website-nav ul li a {
  color: white;
  text-decoration: none;
}

.home-link {
  font-weight: bold;
}

.message {
  position: relative;
  padding: 0 5rem;
  margin-bottom: 3rem;
  width: auto;
}

.message .twitter-link {
  float: left;
  margin-right: 20px;
}

.message .twitter-link img {
  width: 40px;
  height: 40px;
}

.message .text {
  float: left;
}

.message:after, .website-nav:after {
  content: " ";
  display: table;
  clear: both;
}

.graphics {
  display: none;
  position: absolute;
  bottom: 0;
  left: 0;
  margin-bottom: 0;
}

.graphics .tower svg {
  width: calc(100vw);
  height: calc(90vh);
}

.graphics .cloud {
  top: 30rem;
  position: relative;
}

.page-content {
  padding: 1rem 5rem;
}

.page-content p {
  margin-bottom: 1rem;
}

.path {
  stroke-dasharray: 4000;
  stroke-dashoffset: 4000;
  animation: dash 5s linear forwards;
}

@keyframes dash {
  to {
    stroke-dashoffset: 0;
  }
}

@media (min-height: 500px) and (min-width: 700px) {
  .message {
    padding: 0;
    width: 50%;
    left: calc(50vw - 5rem);
    top: calc(15vh - 5rem);
  }

  .message .text {
    padding-right: 0rem;
  }

  .graphics {
    display: block;
    margin-bottom: 6rem;
  }

  .message .twitter-link img {
    width: 70%;
    height: 70%;
  }

  .page-content {
    padding: 3rem 5rem;
  }
}

@media (min-height: 500px) and (min-width: 1240px) {
  .message {
    left: calc(50vw - 10rem);
    top: calc(25vh - 5rem);
  }

  h1 {
    font-size: 5rem;
  }

  .message .twitter-link img {
    width: 80%;
    height: 80%;
  }
}

@media (min-aspect-ratio: 11/5)  {
  .graphics {
    display: none;
  }
}

*/

